# bot-starter-kit

./: .gitignore  AGENTS.md  AI_GUIDELINES.md  CLAUDE.md  CODE_GUIDELINES.md  CODE_PATTERNS.md  Cargo.toml  KNOWLEDGE_BASE.md  MANAGEMENT.md  README.md  rustfmt.toml
.agents/skills/analyze-management/: SKILL.md
.agents/skills/analyze-management/agents/: openai.yaml
.agents/skills/analyze-management/references/: workflows.md
.github/workflows/: branch.yaml  clippy.yml  guidelines.yml  main.yaml  pages.yml  rust.yml  rustfmt.yml
benches/: channels.rs  databases.rs
examples/: broadcast_builder.rs  whatsapp_demoscene.rs
management/: BUGS.md  BUSINESS.backlog.md  BUSINESS.md  DECISIONS.md  DEFINITION_OF_READY_DONE.md  ENGINEERING.backlog.md  ENGINEERING.md  EXPERIMENTS.md  INCIDENTS.md  MANAGEMENT.md  OPERATIONS.backlog.md  OPERATIONS.md  README.ai.md  RELEASES.md  RISKS.md  TOOLING.md  TRACEABILITY.md
resources/helper_scripts/: concat_clips  generate_demo_media
resources/market_mood/lottie/: README.md  tgs_to_whatsapp.sh
resources/market_mood/lottie/set_1/: b3_home_trade_1.tgs  b3_home_trade_2.tgs  b3_home_trade_3.tgs
resources/market_mood/lottie/set_2/: b3_home_trade_v2_1.tgs  b3_home_trade_v2_2.tgs  b3_home_trade_v2_3.tgs
resources/market_mood/lottie/set_3/: b3_home_trade_v3_1.tgs  b3_home_trade_v3_2.tgs  b3_home_trade_v3_3.tgs
resources/market_mood/lottie/set_3_failure/: b3_home_trade_v3_1.tgs  b3_home_trade_v3_2.tgs  b3_home_trade_v3_3.tgs
resources/market_mood/lottie/set_4/: b3_home_trade_v4_1.tgs  b3_home_trade_v4_2.tgs  b3_home_trade_v4_3.tgs
resources/market_mood/lottie/set_5/: b3_home_trade_v5_1.tgs  b3_home_trade_v5_2.tgs  b3_home_trade_v5_3.tgs
resources/market_mood/lottie/set_6/: b3_home_trade_v6_1.tgs  b3_home_trade_v6_2.tgs  b3_home_trade_v6_3.tgs
resources/market_mood/lottie/set_7/: b3_home_trade_v7_1.tgs  b3_home_trade_v7_2.tgs  b3_home_trade_v7_3.tgs
resources/market_mood/lottie/set_7b/: b3_home_trade_v7b_1.tgs  b3_home_trade_v7b_2.tgs  b3_home_trade_v7b_3.tgs
resources/videos/bulletins/: README
resources/videos/bulletins/originals/: README
resources/videos/invite/: README
scripts/: create_telegram_webhook_tls  enforce_code_guidelines
scripts/ci/: enforce_code_guidelines  enforce_management_rules
scripts/management/: acceptance_packet  advance_state  audit_requirements  block_work  chase_techdebts  chat_about  close_experiment  close_incident  close_risk  create_release_tag  diagram_architecture_planned  diagram_architecture_real  diagram_module_dependencies  draft_plan  estimate_requirement  evaluate_plan  gui  gui_server  link_evidence  management_report  management_status  management_tool  meeting_packet  prepare_release  record_decision  record_experiment  record_incident  record_release  record_risk  review  semantic_context  stale_work  start_work  sync_requirement  test_gui_server  test_management_tool  trace_requirement  unblock_work  verification_check
scripts/management/gui_static/: app.css  app.js  index.html
scripts/operations/: gcp_webhook_firewall
src/: lib.rs  resources.rs
src/commons/: mod.rs
src/commons/test_commons/: mod.rs  redb_test_commons.rs
src/db/: mod.rs
src/db/heed/: async_heed.rs  benchmark.rs  heed_wrapper.rs  mod.rs  serde.rs
src/db/redb/: async_redb.rs  benchmark.rs  mod.rs  serde.rs
src/db/redb/redb_impls/: common_repositories_redb.rs  mod.rs
src/db/redb/redb_wrapper/: mod.rs  redb_repository.rs
src/db/sqlite/: benchmark.rs  mod.rs  sqlite_wrapper.rs
src/logic/: button_example.rs  demoscene.rs  dialog_example.rs  gpt_framework.rs  gpt_ui.rs  inline_example.rs  mod.rs  telegram_demoscene.rs
src/messaging/: mod.rs  user_router.rs
src/messaging/contracts/: messaging.rs  messaging_platform.rs  mod.rs
src/messaging/gateways/: mod.rs  telegram_gateway.rs
src/messaging/impls/: telegram_gateway.rs
src/models/: config.rs
src/plot/: config.rs  data.rs  demo.rs  mod.rs  moves.rs  timing.rs
src/plot/render/: layout.rs  metrics.rs  mod.rs
src/repository/: error.rs  mod.rs
src/repository/contracts/: common_repositories.rs  telegram_repositories.rs
src/repository/models/: common_models.rs  mod.rs  telegram_models.rs
src/repository/traits/: common_repositories.rs  mod.rs  telegram_repositories.rs
