[package]
name = "bot-starter-kit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bot_starter_kit"

[workspace]

[dependencies]

once_cell = { version = "1" }
const_format = { version = "0.2" }

# async & streams
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3" }
async-channel = "2.5"
# ogre-stream-ext = { version = "0.1" }

# encryptable configs and command-line support
ogre-config-meld = { version = "0.1" }  # for config & cmdline models, merging, encryption
litcrypt = { version = "0.4" }  # in-program safe-ish secrets
serde = { version = "1", features = ["derive"] }
serde_json = "1"

derive_more = { version = "2", features = ["debug"] }   # several auto-implementation macros for convenience traits, field redaction, and more

# databases and helpers
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite-unbundled"] }
redb = { version = "4" } #, default-features = false, features = ["cache_metrics"] }
heed = { version = "0.22" }
bytemuck = { version = "1.25", features = ["derive", "min_const_generics"] }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "unaligned"] }
# zerocopy = { version = "0.8" } # who knows in the future?

# plotting
chrono = { version = "0.4", features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["png"] }
oxipng = "10"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "chrono", "line_series", "ttf"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }   # spike only dependency

# really needed ?
anyhow = "1"
log = "0.4"

# Telegram
teloxide = { version = "0.17", features = ["macros", "throttle", "webhooks-axum"] }

# HTTP endpoints
axum = {  version = "0.8", features = ["tokio", "macros", "http2"]  }

# bingen optimizations -- compile with RUSTFLAGS="-C target-cpu=native" CFLAGS="-O3 -march=native -mtune=native" cargo build --release
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
