[package]
name = "bot-starter-kit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bot_starter_kit"

[workspace]

[dependencies]

#once_cell = { version = "1", default-features = false }
const_format = { version = "0.2", default-features = false }

# async & streams
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
futures = { version = "0.3", default-features = false }
async-channel = { version = "2.5", default-features = false }
ogre-stream-ext = { version = "0.1", default-features = false }
futures-time = { version = "3", default-features = false, features = ["default"] } # enables the async-io backend required by ogre-stream-ext's deprecated futures-time dependency

# encryptable configs and command-line support
ogre-config-meld = { version = "0.1.7", default-features = false }  # for config & cmdline models, merging, encryption
litcrypt = { version = "0.4", default-features = false }  # in-program safe-ish secrets
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = {  version = "1", default-features = false }

derive_more = { version = "2", default-features = false, features = ["debug"] }   # several auto-implementation macros for convenience traits, field redaction, and more

# databases and helpers
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite-unbundled", "derive"] }
redb = { version = "4", default-features = false } #, default-features = false, features = ["cache_metrics"] }
heed = { version = "0.22", default-features = false }
bytemuck = { version = "1.25", default-features = false, features = ["derive", "min_const_generics"] }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "unaligned"] }
# zerocopy = { version = "0.8", default-features = false } # who knows in the future?

# plotting
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["png"] }
oxipng = "10"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "chrono", "line_series", "ttf"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }   # spike only dependency

# really needed?
anyhow = { version = "1", default-features = false }
log = { version = "0.4", default-features = false, features = ["serde"] }
ftlog = { version = "0.2", default-features = false }

# Telegram
teloxide = { version = "0.17", default-features = false, features = ["macros", "throttle", "webhooks-axum", "ctrlc_handler"] }

# WhatsApp
whatsapp-business-rs = { version = "0.5", default-features = false, features = ["incoming_message_ext", "media_ext", "batch", "byos"] }

# HTTP endpoints
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2"] }
hex = { version = "0.4", default-features = false }
hmac = { version = "0.13", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sha2 = { version = "0.11", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
url = { version = "2", default-features = false }

[dev-dependencies]

# examples
##########

base64 = { version = "0.22", default-features = false }
ammonia = { version = "4", default-features = false }

# tests
#######

ctor = { version = "1", default-features = false, features = ["proc_macro"] }

# benchmarks
############

criterion = { version = "0.8", default-features = false, features = ["html_reports"] }
tempfile = { version = "3", default-features = false }

[[bench]]
name = "channels"
harness = false

[[bench]]
name = "databases"
harness = false

# bingen optimizations -- compile with RUSTFLAGS="-C target-cpu=native" CFLAGS="-O3 -march=native -mtune=native" cargo build --release
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"